# bugtrackerversion2

./: README.md  pyproject.toml
bugtracker/: admin.py  forms.py  models.py  views.py
bugtracker/migrations/: 0001_initial.py
config/: settings.py  urls.py
static/: bug.css
templates/: base.html  generic_form.html  hunter.html  index.html  ticket.html
