[tool.poetry]
name = "bugtracker-nicodalfonso"
version = "0.1.0"
description = "An application to report, track, and update the status of bugs found in internal software. Supports multiple users."
authors = ["Nico Alfonso <nicodalfonso@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
